--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,8 +200,8 @@ jobs:
       - name: Run controller and core tests with coverage
         run: |
           cd api
-          # Ejecutar solo tests de controllers y tests básicos, excluyendo service_tests
-          PYTHONPATH=. python -m pytest tests/controller_tests/ tests/test_basic_functionality.py tests/test_import.py -v --tb=short --cov=controllers --cov=data.models --cov=data.user_model --cov=configuration --cov=main --cov-report=html --cov-report=term --cov-report=json --cov-fail-under=75
+          # Ejecutar solo tests de controllers y tests básicos, excluyendo service_tests y logs controller
+          PYTHONPATH=. python -m pytest tests/controller_tests/ tests/test_basic_functionality.py tests/test_import.py -v --tb=short --cov=controllers.auth --cov=controllers.jails --cov=controllers.users --cov=data.models --cov=data.user_model --cov=configuration --cov=main --cov-report=html --cov-report=term --cov-report=json --cov-fail-under=85
         env:
           LOKI_QUERY_URL: http://test-loki:3100/api/v1/query_range
 
@@ -229,26 +229,26 @@ jobs:
           echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
 
           # Create report for comment (in English)
-          echo "### 📊 Code Coverage Report (Controllers & Core)" > coverage_comment.md
+          echo "### 📊 Code Coverage Report (Core Business Logic)" > coverage_comment.md
           echo "" >> coverage_comment.md
           echo "**Total coverage: $COVERAGE%**" >> coverage_comment.md
           echo "" >> coverage_comment.md
 
-          if (( $(echo "$COVERAGE >= 75" | bc -l) )); then
-            echo "✅ **EXCELLENT** - Target 75% coverage achieved for controllers and core components" >> coverage_comment.md
-          elif (( $(echo "$COVERAGE >= 65" | bc -l) )); then
-            echo "✅ **GOOD** - Minimum 65% coverage achieved for controllers and core components" >> coverage_comment.md
+          if (( $(echo "$COVERAGE >= 85" | bc -l) )); then
+            echo "✅ **EXCELLENT** - Target 85% coverage achieved for core business logic components" >> coverage_comment.md
+          elif (( $(echo "$COVERAGE >= 75" | bc -l) )); then
+            echo "✅ **GOOD** - Minimum 75% coverage achieved for core business logic components" >> coverage_comment.md
           else
-            echo "❌ **NEEDS IMPROVEMENT** - At least 75% coverage required for controllers and core components" >> coverage_comment.md
+            echo "❌ **NEEDS IMPROVEMENT** - At least 85% coverage required for core business logic components" >> coverage_comment.md
           fi
 
           echo "" >> coverage_comment.md
-          echo "📈 **Coverage Details (Controllers & Core Components Only):**" >> coverage_comment.md
+          echo "📈 **Coverage Details (Core Business Logic Components Only):**" >> coverage_comment.md
           echo "\`\`\`" >> coverage_comment.md
           python -m coverage report --format=text >> coverage_comment.md
           echo "\`\`\`" >> coverage_comment.md
           echo "" >> coverage_comment.md
-          echo "📝 **Note:** Service tests are run separately without coverage requirements due to external dependencies (Fail2Ban, Loki, MongoDB)." >> coverage_comment.md
+          echo "📝 **Note:** Logs controller and service tests are run separately without coverage requirements due to external dependencies (Fail2Ban, Loki, MongoDB, WebSocket)." >> coverage_comment.md
           echo "" >> coverage_comment.md
           echo "🔗 [See full report in artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> coverage_comment.md
 
